@@ -1,3 +1,8 @@
+2002-03-19  Havoc Pennington  <hp@pobox.com>
+
+	* backends/xml-cache.c (dircmp): fix bad assertion reported
+	by lunarbard on #gnome
+
 2002-03-14  Havoc Pennington  <hp@redhat.com>
 
 	* gconf/gconf-sanity-check.c (check_gconf): beef up the sanity
